<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/dimen_10">

    <View
        android:id="@+id/div_1"
        style="@style/Divider"
        app:layout_constraintBottom_toTopOf="@id/tv_total_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:fontFamily="@font/bold"
        android:paddingVertical="@dimen/dimen_15"
        android:text="@string/total"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_1" />

    <TextView
        android:id="@+id/tv_total_order_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_3"
        android:layout_marginStart="@dimen/dimen_10"
        android:fontFamily="@font/semibold"
        android:text="@string/_2_items"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/tv_total_title"
        app:layout_constraintStart_toEndOf="@id/tv_total_title"
        app:layout_constraintTop_toTopOf="@id/tv_total_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_3"
        android:fontFamily="@font/semibold"
        android:text="@string/items"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/tv_total_title"
        app:layout_constraintStart_toEndOf="@+id/tv_total_order_qty"
        app:layout_constraintTop_toTopOf="@id/tv_total_title" />

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10"
        android:fontFamily="@font/bold"
        android:text="@string/rp_112_000"
        android:textSize="@dimen/font_17"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_total_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_total_title" />

    <View
        android:id="@+id/div_2"
        style="@style/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_total_title" />


</androidx.constraintlayout.widget.ConstraintLayout>