<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:id="@+id/cl_address_view"
    >

    <View
        android:id="@+id/div_1"
        style="@style/Divider"
        app:layout_constraintBottom_toTopOf="@id/tv_address_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/tempat_kerja"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_1" />

    <TextView
        android:id="@+id/tv_address_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/dummy_address"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/iv_proceed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address_label" />

    <ImageView
        android:id="@+id/iv_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_proceed"
        android:src="@drawable/ic_proceed"
        app:layout_constraintBottom_toBottomOf="@id/div_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/div_1" />

    <View
        android:id="@+id/div_2"
        style="@style/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address_location" />

</androidx.constraintlayout.widget.ConstraintLayout>