<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:paddingVertical="4dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription,RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/cv_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_button">

            <ImageView
                android:id="@+id/iv_food"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/food_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_food" />

            <TextView
                android:id="@+id/tv_food_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/food_price"
                android:textColor="@color/orange"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_food_name" />

            <TextView
                android:id="@+id/tv_food_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/bold"
                android:text="@string/food_desc_title"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@id/tv_food_price"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/cv_resto"
                app:layout_constraintTop_toBottomOf="@+id/tv_food_price" />

            <TextView
                android:id="@+id/tv_food_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:text="@string/food_description"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_food"
                app:layout_constraintStart_toStartOf="@+id/tv_food_desc_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_food_desc_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_resto"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_food_desc">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_logo_alfaresto"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular"
                            android:text="@string/phone_resto"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular"
                            android:text="@string/address_resto"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular"
                            android:text="@string/email_resto"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="85dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/add_button"
                android:fontFamily="@font/bold"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_resto" />

            <LinearLayout
                android:id="@+id/ll_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_to_cart">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_minus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/add_button"
                    android:fontFamily="@font/bold"
                    android:text="@string/remove_item"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_plus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/add_button"
                    android:fontFamily="@font/bold"
                    android:text="@string/add_item"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>